<resources xmlns:xliff="urm:oasis:name:tc:xliff:document:1.2">
    <string name="app_name">Coffee Order</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="cream">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Order_summary">Order summary</string>
    <string name="order">ORDER</string>
    <string name="Order_summary_name">Name:</string>
    <string name="thank_you">Thank you!!</string>
    <string name="quantity1">Quantity</string>
    <string name="hasChocolate">Add Chocolate?</string>
    <string name="hasCream">Add Whipped Cream?</string>
    <string name="Total">Total</string>
</resources>
