<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thangtruong19.coffeeorder.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text|textCapWords"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/toppings"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/toppings"
        style="@style/headerTextStyle"
        />
    <CheckBox
        android:id="@+id/check_topping_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>
    <CheckBox
        android:id="@+id/check_topping_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chocolate"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>
    <TextView
        android:id="@+id/quantity"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/quantity"
        style="@style/headerTextStyle"
       />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:onClick="increment"
            android:text="+"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="16dp"
            android:text="2"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:onClick="decrement"
            android:text="-"/>
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Order_summary"
        style="@style/headerTextStyle"
        />
    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:text="0 VND"
        android:textColor="@android:color/black"

        />
    <Button
        android:id="@+id/bu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:text="@string/order"

        />


</LinearLayout>
</ScrollView>